parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    IF
    LBRACKETS
    LCHAV
    LESS
    PV
    RBRACKETS
    RCHAV

Grammar

Rule 0     S' -> program
Rule 1     program -> CLASS ID LPAREN ID IGUAL ID RPAREN DP classbody
Rule 2     program -> CLASS ID LPAREN ID RPAREN DP classbody
Rule 3     program -> CLASS ID DP classbody
Rule 4     program -> CLASS ID LPAREN ID IGUAL ID RPAREN DP classbody program
Rule 5     program -> CLASS ID LPAREN ID RPAREN DP classbody program
Rule 6     program -> CLASS ID DP classbody program
Rule 7     classbody -> NEWLINE IDENT decls DEDENT
Rule 8     decls -> decl decls
Rule 9     decls -> decl
Rule 10    decl -> funcdecl
Rule 11    decl -> ID IGUAL exp
Rule 12    funcdecl -> signature body
Rule 13    signature -> DEF ID LPAREN sigparams RPAREN DP
Rule 14    signature -> DEF ID LPAREN RPAREN DP
Rule 15    sigparams -> ID
Rule 16    sigparams -> SELF
Rule 17    sigparams -> ID COMMA sigparams
Rule 18    sigparams -> SELF COMMA sigparams
Rule 19    body -> NEWLINE IDENT stms DEDENT
Rule 20    stms -> stm
Rule 21    stms -> stm stms
Rule 22    stm -> exp NEWLINE
Rule 23    stm -> WHILE exp DP body
Rule 24    stm -> RETURN exp NEWLINE
Rule 25    stm -> PASS NEWLINE
Rule 26    stm -> FOR exp IN exp DP body
Rule 27    exp -> exp IGUAL exp1
Rule 28    exp -> exp1
Rule 29    exp1 -> exp1 SOMA exp2
Rule 30    exp1 -> exp2
Rule 31    exp2 -> exp2 VEZES exp3
Rule 32    exp2 -> exp3
Rule 33    exp3 -> exp4 POT exp3
Rule 34    exp3 -> exp4
Rule 35    exp4 -> call
Rule 36    exp4 -> NUMBER
Rule 37    startExp -> VEZES ID
Rule 38    starExp -> VEZES VEZES ID
Rule 39    exp4 -> ID
Rule 40    exp4 -> TRUE
Rule 41    exp4 -> FALSE
Rule 42    exp4 -> STRING
Rule 43    exp4 -> SELF
Rule 44    exp4 -> ID P exp4
Rule 45    exp4 -> SELF P exp4
Rule 46    call -> ID LPAREN params RPAREN
Rule 47    call -> ID LPAREN RPAREN
Rule 48    params -> exp COMMA params
Rule 49    params -> exp

Terminals, with rules where they appear

CLASS                : 1 2 3 4 5 6
COMMA                : 17 18 48
DEDENT               : 7 19
DEF                  : 13 14
DP                   : 1 2 3 4 5 6 13 14 23 26
FALSE                : 41
FOR                  : 26
ID                   : 1 1 1 2 2 3 4 4 4 5 5 6 11 13 14 15 17 37 38 39 44 46 47
IDENT                : 7 19
IF                   : 
IGUAL                : 1 4 11 27
IN                   : 26
LBRACKETS            : 
LCHAV                : 
LESS                 : 
LPAREN               : 1 2 4 5 13 14 46 47
NEWLINE              : 7 19 22 24 25
NUMBER               : 36
P                    : 44 45
PASS                 : 25
POT                  : 33
PV                   : 
RBRACKETS            : 
RCHAV                : 
RETURN               : 24
RPAREN               : 1 2 4 5 13 14 46 47
SELF                 : 16 18 43 45
SOMA                 : 29
STRING               : 42
TRUE                 : 40
VEZES                : 31 37 38 38
WHILE                : 23
error                : 

Nonterminals, with rules where they appear

body                 : 12 23 26
call                 : 35
classbody            : 1 2 3 4 5 6
decl                 : 8 9
decls                : 7 8
exp                  : 11 22 23 24 26 26 27 48 49
exp1                 : 27 28 29
exp2                 : 29 30 31
exp3                 : 31 32 33
exp4                 : 33 34 44 45
funcdecl             : 10
params               : 46 48
program              : 4 5 6 0
signature            : 12
sigparams            : 13 17 18
starExp              : 
startExp             : 
stm                  : 20 21
stms                 : 19 21

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . CLASS ID LPAREN ID IGUAL ID RPAREN DP classbody
    (2) program -> . CLASS ID LPAREN ID RPAREN DP classbody
    (3) program -> . CLASS ID DP classbody
    (4) program -> . CLASS ID LPAREN ID IGUAL ID RPAREN DP classbody program
    (5) program -> . CLASS ID LPAREN ID RPAREN DP classbody program
    (6) program -> . CLASS ID DP classbody program

    CLASS           shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> CLASS . ID LPAREN ID IGUAL ID RPAREN DP classbody
    (2) program -> CLASS . ID LPAREN ID RPAREN DP classbody
    (3) program -> CLASS . ID DP classbody
    (4) program -> CLASS . ID LPAREN ID IGUAL ID RPAREN DP classbody program
    (5) program -> CLASS . ID LPAREN ID RPAREN DP classbody program
    (6) program -> CLASS . ID DP classbody program

    ID              shift and go to state 3


state 3

    (1) program -> CLASS ID . LPAREN ID IGUAL ID RPAREN DP classbody
    (2) program -> CLASS ID . LPAREN ID RPAREN DP classbody
    (3) program -> CLASS ID . DP classbody
    (4) program -> CLASS ID . LPAREN ID IGUAL ID RPAREN DP classbody program
    (5) program -> CLASS ID . LPAREN ID RPAREN DP classbody program
    (6) program -> CLASS ID . DP classbody program

    LPAREN          shift and go to state 4
    DP              shift and go to state 5


state 4

    (1) program -> CLASS ID LPAREN . ID IGUAL ID RPAREN DP classbody
    (2) program -> CLASS ID LPAREN . ID RPAREN DP classbody
    (4) program -> CLASS ID LPAREN . ID IGUAL ID RPAREN DP classbody program
    (5) program -> CLASS ID LPAREN . ID RPAREN DP classbody program

    ID              shift and go to state 6


state 5

    (3) program -> CLASS ID DP . classbody
    (6) program -> CLASS ID DP . classbody program
    (7) classbody -> . NEWLINE IDENT decls DEDENT

    NEWLINE         shift and go to state 8

    classbody                      shift and go to state 7

state 6

    (1) program -> CLASS ID LPAREN ID . IGUAL ID RPAREN DP classbody
    (2) program -> CLASS ID LPAREN ID . RPAREN DP classbody
    (4) program -> CLASS ID LPAREN ID . IGUAL ID RPAREN DP classbody program
    (5) program -> CLASS ID LPAREN ID . RPAREN DP classbody program

    IGUAL           shift and go to state 9
    RPAREN          shift and go to state 10


state 7

    (3) program -> CLASS ID DP classbody .
    (6) program -> CLASS ID DP classbody . program
    (1) program -> . CLASS ID LPAREN ID IGUAL ID RPAREN DP classbody
    (2) program -> . CLASS ID LPAREN ID RPAREN DP classbody
    (3) program -> . CLASS ID DP classbody
    (4) program -> . CLASS ID LPAREN ID IGUAL ID RPAREN DP classbody program
    (5) program -> . CLASS ID LPAREN ID RPAREN DP classbody program
    (6) program -> . CLASS ID DP classbody program

    $end            reduce using rule 3 (program -> CLASS ID DP classbody .)
    CLASS           shift and go to state 2

    program                        shift and go to state 11

state 8

    (7) classbody -> NEWLINE . IDENT decls DEDENT

    IDENT           shift and go to state 12


state 9

    (1) program -> CLASS ID LPAREN ID IGUAL . ID RPAREN DP classbody
    (4) program -> CLASS ID LPAREN ID IGUAL . ID RPAREN DP classbody program

    ID              shift and go to state 13


state 10

    (2) program -> CLASS ID LPAREN ID RPAREN . DP classbody
    (5) program -> CLASS ID LPAREN ID RPAREN . DP classbody program

    DP              shift and go to state 14


state 11

    (6) program -> CLASS ID DP classbody program .

    $end            reduce using rule 6 (program -> CLASS ID DP classbody program .)


state 12

    (7) classbody -> NEWLINE IDENT . decls DEDENT
    (8) decls -> . decl decls
    (9) decls -> . decl
    (10) decl -> . funcdecl
    (11) decl -> . ID IGUAL exp
    (12) funcdecl -> . signature body
    (13) signature -> . DEF ID LPAREN sigparams RPAREN DP
    (14) signature -> . DEF ID LPAREN RPAREN DP

    ID              shift and go to state 18
    DEF             shift and go to state 20

    decls                          shift and go to state 15
    decl                           shift and go to state 16
    funcdecl                       shift and go to state 17
    signature                      shift and go to state 19

state 13

    (1) program -> CLASS ID LPAREN ID IGUAL ID . RPAREN DP classbody
    (4) program -> CLASS ID LPAREN ID IGUAL ID . RPAREN DP classbody program

    RPAREN          shift and go to state 21


state 14

    (2) program -> CLASS ID LPAREN ID RPAREN DP . classbody
    (5) program -> CLASS ID LPAREN ID RPAREN DP . classbody program
    (7) classbody -> . NEWLINE IDENT decls DEDENT

    NEWLINE         shift and go to state 8

    classbody                      shift and go to state 22

state 15

    (7) classbody -> NEWLINE IDENT decls . DEDENT

    DEDENT          shift and go to state 23


state 16

    (8) decls -> decl . decls
    (9) decls -> decl .
    (8) decls -> . decl decls
    (9) decls -> . decl
    (10) decl -> . funcdecl
    (11) decl -> . ID IGUAL exp
    (12) funcdecl -> . signature body
    (13) signature -> . DEF ID LPAREN sigparams RPAREN DP
    (14) signature -> . DEF ID LPAREN RPAREN DP

    DEDENT          reduce using rule 9 (decls -> decl .)
    ID              shift and go to state 18
    DEF             shift and go to state 20

    decl                           shift and go to state 16
    decls                          shift and go to state 24
    funcdecl                       shift and go to state 17
    signature                      shift and go to state 19

state 17

    (10) decl -> funcdecl .

    ID              reduce using rule 10 (decl -> funcdecl .)
    DEF             reduce using rule 10 (decl -> funcdecl .)
    DEDENT          reduce using rule 10 (decl -> funcdecl .)


state 18

    (11) decl -> ID . IGUAL exp

    IGUAL           shift and go to state 25


state 19

    (12) funcdecl -> signature . body
    (19) body -> . NEWLINE IDENT stms DEDENT

    NEWLINE         shift and go to state 27

    body                           shift and go to state 26

state 20

    (13) signature -> DEF . ID LPAREN sigparams RPAREN DP
    (14) signature -> DEF . ID LPAREN RPAREN DP

    ID              shift and go to state 28


state 21

    (1) program -> CLASS ID LPAREN ID IGUAL ID RPAREN . DP classbody
    (4) program -> CLASS ID LPAREN ID IGUAL ID RPAREN . DP classbody program

    DP              shift and go to state 29


state 22

    (2) program -> CLASS ID LPAREN ID RPAREN DP classbody .
    (5) program -> CLASS ID LPAREN ID RPAREN DP classbody . program
    (1) program -> . CLASS ID LPAREN ID IGUAL ID RPAREN DP classbody
    (2) program -> . CLASS ID LPAREN ID RPAREN DP classbody
    (3) program -> . CLASS ID DP classbody
    (4) program -> . CLASS ID LPAREN ID IGUAL ID RPAREN DP classbody program
    (5) program -> . CLASS ID LPAREN ID RPAREN DP classbody program
    (6) program -> . CLASS ID DP classbody program

    $end            reduce using rule 2 (program -> CLASS ID LPAREN ID RPAREN DP classbody .)
    CLASS           shift and go to state 2

    program                        shift and go to state 30

state 23

    (7) classbody -> NEWLINE IDENT decls DEDENT .

    CLASS           reduce using rule 7 (classbody -> NEWLINE IDENT decls DEDENT .)
    $end            reduce using rule 7 (classbody -> NEWLINE IDENT decls DEDENT .)


state 24

    (8) decls -> decl decls .

    DEDENT          reduce using rule 8 (decls -> decl decls .)


state 25

    (11) decl -> ID IGUAL . exp
    (27) exp -> . exp IGUAL exp1
    (28) exp -> . exp1
    (29) exp1 -> . exp1 SOMA exp2
    (30) exp1 -> . exp2
    (31) exp2 -> . exp2 VEZES exp3
    (32) exp2 -> . exp3
    (33) exp3 -> . exp4 POT exp3
    (34) exp3 -> . exp4
    (35) exp4 -> . call
    (36) exp4 -> . NUMBER
    (39) exp4 -> . ID
    (40) exp4 -> . TRUE
    (41) exp4 -> . FALSE
    (42) exp4 -> . STRING
    (43) exp4 -> . SELF
    (44) exp4 -> . ID P exp4
    (45) exp4 -> . SELF P exp4
    (46) call -> . ID LPAREN params RPAREN
    (47) call -> . ID LPAREN RPAREN

    NUMBER          shift and go to state 38
    ID              shift and go to state 31
    TRUE            shift and go to state 39
    FALSE           shift and go to state 40
    STRING          shift and go to state 41
    SELF            shift and go to state 42

    exp                            shift and go to state 32
    exp1                           shift and go to state 33
    exp2                           shift and go to state 34
    exp3                           shift and go to state 35
    exp4                           shift and go to state 36
    call                           shift and go to state 37

state 26

    (12) funcdecl -> signature body .

    ID              reduce using rule 12 (funcdecl -> signature body .)
    DEF             reduce using rule 12 (funcdecl -> signature body .)
    DEDENT          reduce using rule 12 (funcdecl -> signature body .)


state 27

    (19) body -> NEWLINE . IDENT stms DEDENT

    IDENT           shift and go to state 43


state 28

    (13) signature -> DEF ID . LPAREN sigparams RPAREN DP
    (14) signature -> DEF ID . LPAREN RPAREN DP

    LPAREN          shift and go to state 44


state 29

    (1) program -> CLASS ID LPAREN ID IGUAL ID RPAREN DP . classbody
    (4) program -> CLASS ID LPAREN ID IGUAL ID RPAREN DP . classbody program
    (7) classbody -> . NEWLINE IDENT decls DEDENT

    NEWLINE         shift and go to state 8

    classbody                      shift and go to state 45

state 30

    (5) program -> CLASS ID LPAREN ID RPAREN DP classbody program .

    $end            reduce using rule 5 (program -> CLASS ID LPAREN ID RPAREN DP classbody program .)


state 31

    (39) exp4 -> ID .
    (44) exp4 -> ID . P exp4
    (46) call -> ID . LPAREN params RPAREN
    (47) call -> ID . LPAREN RPAREN

    POT             reduce using rule 39 (exp4 -> ID .)
    VEZES           reduce using rule 39 (exp4 -> ID .)
    SOMA            reduce using rule 39 (exp4 -> ID .)
    IGUAL           reduce using rule 39 (exp4 -> ID .)
    ID              reduce using rule 39 (exp4 -> ID .)
    DEF             reduce using rule 39 (exp4 -> ID .)
    DEDENT          reduce using rule 39 (exp4 -> ID .)
    NEWLINE         reduce using rule 39 (exp4 -> ID .)
    COMMA           reduce using rule 39 (exp4 -> ID .)
    RPAREN          reduce using rule 39 (exp4 -> ID .)
    DP              reduce using rule 39 (exp4 -> ID .)
    IN              reduce using rule 39 (exp4 -> ID .)
    P               shift and go to state 46
    LPAREN          shift and go to state 47


state 32

    (11) decl -> ID IGUAL exp .
    (27) exp -> exp . IGUAL exp1

    ID              reduce using rule 11 (decl -> ID IGUAL exp .)
    DEF             reduce using rule 11 (decl -> ID IGUAL exp .)
    DEDENT          reduce using rule 11 (decl -> ID IGUAL exp .)
    IGUAL           shift and go to state 48


state 33

    (28) exp -> exp1 .
    (29) exp1 -> exp1 . SOMA exp2

    IGUAL           reduce using rule 28 (exp -> exp1 .)
    ID              reduce using rule 28 (exp -> exp1 .)
    DEF             reduce using rule 28 (exp -> exp1 .)
    DEDENT          reduce using rule 28 (exp -> exp1 .)
    NEWLINE         reduce using rule 28 (exp -> exp1 .)
    COMMA           reduce using rule 28 (exp -> exp1 .)
    RPAREN          reduce using rule 28 (exp -> exp1 .)
    DP              reduce using rule 28 (exp -> exp1 .)
    IN              reduce using rule 28 (exp -> exp1 .)
    SOMA            shift and go to state 49


state 34

    (30) exp1 -> exp2 .
    (31) exp2 -> exp2 . VEZES exp3

    SOMA            reduce using rule 30 (exp1 -> exp2 .)
    IGUAL           reduce using rule 30 (exp1 -> exp2 .)
    ID              reduce using rule 30 (exp1 -> exp2 .)
    DEF             reduce using rule 30 (exp1 -> exp2 .)
    DEDENT          reduce using rule 30 (exp1 -> exp2 .)
    NEWLINE         reduce using rule 30 (exp1 -> exp2 .)
    COMMA           reduce using rule 30 (exp1 -> exp2 .)
    RPAREN          reduce using rule 30 (exp1 -> exp2 .)
    DP              reduce using rule 30 (exp1 -> exp2 .)
    IN              reduce using rule 30 (exp1 -> exp2 .)
    VEZES           shift and go to state 50


state 35

    (32) exp2 -> exp3 .

    VEZES           reduce using rule 32 (exp2 -> exp3 .)
    SOMA            reduce using rule 32 (exp2 -> exp3 .)
    IGUAL           reduce using rule 32 (exp2 -> exp3 .)
    ID              reduce using rule 32 (exp2 -> exp3 .)
    DEF             reduce using rule 32 (exp2 -> exp3 .)
    DEDENT          reduce using rule 32 (exp2 -> exp3 .)
    NEWLINE         reduce using rule 32 (exp2 -> exp3 .)
    COMMA           reduce using rule 32 (exp2 -> exp3 .)
    RPAREN          reduce using rule 32 (exp2 -> exp3 .)
    DP              reduce using rule 32 (exp2 -> exp3 .)
    IN              reduce using rule 32 (exp2 -> exp3 .)


state 36

    (33) exp3 -> exp4 . POT exp3
    (34) exp3 -> exp4 .

    POT             shift and go to state 51
    VEZES           reduce using rule 34 (exp3 -> exp4 .)
    SOMA            reduce using rule 34 (exp3 -> exp4 .)
    IGUAL           reduce using rule 34 (exp3 -> exp4 .)
    ID              reduce using rule 34 (exp3 -> exp4 .)
    DEF             reduce using rule 34 (exp3 -> exp4 .)
    DEDENT          reduce using rule 34 (exp3 -> exp4 .)
    NEWLINE         reduce using rule 34 (exp3 -> exp4 .)
    COMMA           reduce using rule 34 (exp3 -> exp4 .)
    RPAREN          reduce using rule 34 (exp3 -> exp4 .)
    DP              reduce using rule 34 (exp3 -> exp4 .)
    IN              reduce using rule 34 (exp3 -> exp4 .)


state 37

    (35) exp4 -> call .

    POT             reduce using rule 35 (exp4 -> call .)
    VEZES           reduce using rule 35 (exp4 -> call .)
    SOMA            reduce using rule 35 (exp4 -> call .)
    IGUAL           reduce using rule 35 (exp4 -> call .)
    ID              reduce using rule 35 (exp4 -> call .)
    DEF             reduce using rule 35 (exp4 -> call .)
    DEDENT          reduce using rule 35 (exp4 -> call .)
    NEWLINE         reduce using rule 35 (exp4 -> call .)
    COMMA           reduce using rule 35 (exp4 -> call .)
    RPAREN          reduce using rule 35 (exp4 -> call .)
    DP              reduce using rule 35 (exp4 -> call .)
    IN              reduce using rule 35 (exp4 -> call .)


state 38

    (36) exp4 -> NUMBER .

    POT             reduce using rule 36 (exp4 -> NUMBER .)
    VEZES           reduce using rule 36 (exp4 -> NUMBER .)
    SOMA            reduce using rule 36 (exp4 -> NUMBER .)
    IGUAL           reduce using rule 36 (exp4 -> NUMBER .)
    ID              reduce using rule 36 (exp4 -> NUMBER .)
    DEF             reduce using rule 36 (exp4 -> NUMBER .)
    DEDENT          reduce using rule 36 (exp4 -> NUMBER .)
    NEWLINE         reduce using rule 36 (exp4 -> NUMBER .)
    COMMA           reduce using rule 36 (exp4 -> NUMBER .)
    RPAREN          reduce using rule 36 (exp4 -> NUMBER .)
    DP              reduce using rule 36 (exp4 -> NUMBER .)
    IN              reduce using rule 36 (exp4 -> NUMBER .)


state 39

    (40) exp4 -> TRUE .

    POT             reduce using rule 40 (exp4 -> TRUE .)
    VEZES           reduce using rule 40 (exp4 -> TRUE .)
    SOMA            reduce using rule 40 (exp4 -> TRUE .)
    IGUAL           reduce using rule 40 (exp4 -> TRUE .)
    ID              reduce using rule 40 (exp4 -> TRUE .)
    DEF             reduce using rule 40 (exp4 -> TRUE .)
    DEDENT          reduce using rule 40 (exp4 -> TRUE .)
    NEWLINE         reduce using rule 40 (exp4 -> TRUE .)
    COMMA           reduce using rule 40 (exp4 -> TRUE .)
    RPAREN          reduce using rule 40 (exp4 -> TRUE .)
    DP              reduce using rule 40 (exp4 -> TRUE .)
    IN              reduce using rule 40 (exp4 -> TRUE .)


state 40

    (41) exp4 -> FALSE .

    POT             reduce using rule 41 (exp4 -> FALSE .)
    VEZES           reduce using rule 41 (exp4 -> FALSE .)
    SOMA            reduce using rule 41 (exp4 -> FALSE .)
    IGUAL           reduce using rule 41 (exp4 -> FALSE .)
    ID              reduce using rule 41 (exp4 -> FALSE .)
    DEF             reduce using rule 41 (exp4 -> FALSE .)
    DEDENT          reduce using rule 41 (exp4 -> FALSE .)
    NEWLINE         reduce using rule 41 (exp4 -> FALSE .)
    COMMA           reduce using rule 41 (exp4 -> FALSE .)
    RPAREN          reduce using rule 41 (exp4 -> FALSE .)
    DP              reduce using rule 41 (exp4 -> FALSE .)
    IN              reduce using rule 41 (exp4 -> FALSE .)


state 41

    (42) exp4 -> STRING .

    POT             reduce using rule 42 (exp4 -> STRING .)
    VEZES           reduce using rule 42 (exp4 -> STRING .)
    SOMA            reduce using rule 42 (exp4 -> STRING .)
    IGUAL           reduce using rule 42 (exp4 -> STRING .)
    ID              reduce using rule 42 (exp4 -> STRING .)
    DEF             reduce using rule 42 (exp4 -> STRING .)
    DEDENT          reduce using rule 42 (exp4 -> STRING .)
    NEWLINE         reduce using rule 42 (exp4 -> STRING .)
    COMMA           reduce using rule 42 (exp4 -> STRING .)
    RPAREN          reduce using rule 42 (exp4 -> STRING .)
    DP              reduce using rule 42 (exp4 -> STRING .)
    IN              reduce using rule 42 (exp4 -> STRING .)


state 42

    (43) exp4 -> SELF .
    (45) exp4 -> SELF . P exp4

    POT             reduce using rule 43 (exp4 -> SELF .)
    VEZES           reduce using rule 43 (exp4 -> SELF .)
    SOMA            reduce using rule 43 (exp4 -> SELF .)
    IGUAL           reduce using rule 43 (exp4 -> SELF .)
    ID              reduce using rule 43 (exp4 -> SELF .)
    DEF             reduce using rule 43 (exp4 -> SELF .)
    DEDENT          reduce using rule 43 (exp4 -> SELF .)
    NEWLINE         reduce using rule 43 (exp4 -> SELF .)
    COMMA           reduce using rule 43 (exp4 -> SELF .)
    RPAREN          reduce using rule 43 (exp4 -> SELF .)
    DP              reduce using rule 43 (exp4 -> SELF .)
    IN              reduce using rule 43 (exp4 -> SELF .)
    P               shift and go to state 52


state 43

    (19) body -> NEWLINE IDENT . stms DEDENT
    (20) stms -> . stm
    (21) stms -> . stm stms
    (22) stm -> . exp NEWLINE
    (23) stm -> . WHILE exp DP body
    (24) stm -> . RETURN exp NEWLINE
    (25) stm -> . PASS NEWLINE
    (26) stm -> . FOR exp IN exp DP body
    (27) exp -> . exp IGUAL exp1
    (28) exp -> . exp1
    (29) exp1 -> . exp1 SOMA exp2
    (30) exp1 -> . exp2
    (31) exp2 -> . exp2 VEZES exp3
    (32) exp2 -> . exp3
    (33) exp3 -> . exp4 POT exp3
    (34) exp3 -> . exp4
    (35) exp4 -> . call
    (36) exp4 -> . NUMBER
    (39) exp4 -> . ID
    (40) exp4 -> . TRUE
    (41) exp4 -> . FALSE
    (42) exp4 -> . STRING
    (43) exp4 -> . SELF
    (44) exp4 -> . ID P exp4
    (45) exp4 -> . SELF P exp4
    (46) call -> . ID LPAREN params RPAREN
    (47) call -> . ID LPAREN RPAREN

    WHILE           shift and go to state 56
    RETURN          shift and go to state 57
    PASS            shift and go to state 58
    FOR             shift and go to state 59
    NUMBER          shift and go to state 38
    ID              shift and go to state 31
    TRUE            shift and go to state 39
    FALSE           shift and go to state 40
    STRING          shift and go to state 41
    SELF            shift and go to state 42

    stms                           shift and go to state 53
    stm                            shift and go to state 54
    exp                            shift and go to state 55
    exp1                           shift and go to state 33
    exp2                           shift and go to state 34
    exp3                           shift and go to state 35
    exp4                           shift and go to state 36
    call                           shift and go to state 37

state 44

    (13) signature -> DEF ID LPAREN . sigparams RPAREN DP
    (14) signature -> DEF ID LPAREN . RPAREN DP
    (15) sigparams -> . ID
    (16) sigparams -> . SELF
    (17) sigparams -> . ID COMMA sigparams
    (18) sigparams -> . SELF COMMA sigparams

    RPAREN          shift and go to state 62
    ID              shift and go to state 60
    SELF            shift and go to state 63

    sigparams                      shift and go to state 61

state 45

    (1) program -> CLASS ID LPAREN ID IGUAL ID RPAREN DP classbody .
    (4) program -> CLASS ID LPAREN ID IGUAL ID RPAREN DP classbody . program
    (1) program -> . CLASS ID LPAREN ID IGUAL ID RPAREN DP classbody
    (2) program -> . CLASS ID LPAREN ID RPAREN DP classbody
    (3) program -> . CLASS ID DP classbody
    (4) program -> . CLASS ID LPAREN ID IGUAL ID RPAREN DP classbody program
    (5) program -> . CLASS ID LPAREN ID RPAREN DP classbody program
    (6) program -> . CLASS ID DP classbody program

    $end            reduce using rule 1 (program -> CLASS ID LPAREN ID IGUAL ID RPAREN DP classbody .)
    CLASS           shift and go to state 2

    program                        shift and go to state 64

state 46

    (44) exp4 -> ID P . exp4
    (35) exp4 -> . call
    (36) exp4 -> . NUMBER
    (39) exp4 -> . ID
    (40) exp4 -> . TRUE
    (41) exp4 -> . FALSE
    (42) exp4 -> . STRING
    (43) exp4 -> . SELF
    (44) exp4 -> . ID P exp4
    (45) exp4 -> . SELF P exp4
    (46) call -> . ID LPAREN params RPAREN
    (47) call -> . ID LPAREN RPAREN

    NUMBER          shift and go to state 38
    ID              shift and go to state 31
    TRUE            shift and go to state 39
    FALSE           shift and go to state 40
    STRING          shift and go to state 41
    SELF            shift and go to state 42

    exp4                           shift and go to state 65
    call                           shift and go to state 37

state 47

    (46) call -> ID LPAREN . params RPAREN
    (47) call -> ID LPAREN . RPAREN
    (48) params -> . exp COMMA params
    (49) params -> . exp
    (27) exp -> . exp IGUAL exp1
    (28) exp -> . exp1
    (29) exp1 -> . exp1 SOMA exp2
    (30) exp1 -> . exp2
    (31) exp2 -> . exp2 VEZES exp3
    (32) exp2 -> . exp3
    (33) exp3 -> . exp4 POT exp3
    (34) exp3 -> . exp4
    (35) exp4 -> . call
    (36) exp4 -> . NUMBER
    (39) exp4 -> . ID
    (40) exp4 -> . TRUE
    (41) exp4 -> . FALSE
    (42) exp4 -> . STRING
    (43) exp4 -> . SELF
    (44) exp4 -> . ID P exp4
    (45) exp4 -> . SELF P exp4
    (46) call -> . ID LPAREN params RPAREN
    (47) call -> . ID LPAREN RPAREN

    RPAREN          shift and go to state 67
    NUMBER          shift and go to state 38
    ID              shift and go to state 31
    TRUE            shift and go to state 39
    FALSE           shift and go to state 40
    STRING          shift and go to state 41
    SELF            shift and go to state 42

    params                         shift and go to state 66
    exp                            shift and go to state 68
    exp1                           shift and go to state 33
    exp2                           shift and go to state 34
    exp3                           shift and go to state 35
    exp4                           shift and go to state 36
    call                           shift and go to state 37

state 48

    (27) exp -> exp IGUAL . exp1
    (29) exp1 -> . exp1 SOMA exp2
    (30) exp1 -> . exp2
    (31) exp2 -> . exp2 VEZES exp3
    (32) exp2 -> . exp3
    (33) exp3 -> . exp4 POT exp3
    (34) exp3 -> . exp4
    (35) exp4 -> . call
    (36) exp4 -> . NUMBER
    (39) exp4 -> . ID
    (40) exp4 -> . TRUE
    (41) exp4 -> . FALSE
    (42) exp4 -> . STRING
    (43) exp4 -> . SELF
    (44) exp4 -> . ID P exp4
    (45) exp4 -> . SELF P exp4
    (46) call -> . ID LPAREN params RPAREN
    (47) call -> . ID LPAREN RPAREN

    NUMBER          shift and go to state 38
    ID              shift and go to state 31
    TRUE            shift and go to state 39
    FALSE           shift and go to state 40
    STRING          shift and go to state 41
    SELF            shift and go to state 42

    exp1                           shift and go to state 69
    exp2                           shift and go to state 34
    exp3                           shift and go to state 35
    exp4                           shift and go to state 36
    call                           shift and go to state 37

state 49

    (29) exp1 -> exp1 SOMA . exp2
    (31) exp2 -> . exp2 VEZES exp3
    (32) exp2 -> . exp3
    (33) exp3 -> . exp4 POT exp3
    (34) exp3 -> . exp4
    (35) exp4 -> . call
    (36) exp4 -> . NUMBER
    (39) exp4 -> . ID
    (40) exp4 -> . TRUE
    (41) exp4 -> . FALSE
    (42) exp4 -> . STRING
    (43) exp4 -> . SELF
    (44) exp4 -> . ID P exp4
    (45) exp4 -> . SELF P exp4
    (46) call -> . ID LPAREN params RPAREN
    (47) call -> . ID LPAREN RPAREN

    NUMBER          shift and go to state 38
    ID              shift and go to state 31
    TRUE            shift and go to state 39
    FALSE           shift and go to state 40
    STRING          shift and go to state 41
    SELF            shift and go to state 42

    exp2                           shift and go to state 70
    exp3                           shift and go to state 35
    exp4                           shift and go to state 36
    call                           shift and go to state 37

state 50

    (31) exp2 -> exp2 VEZES . exp3
    (33) exp3 -> . exp4 POT exp3
    (34) exp3 -> . exp4
    (35) exp4 -> . call
    (36) exp4 -> . NUMBER
    (39) exp4 -> . ID
    (40) exp4 -> . TRUE
    (41) exp4 -> . FALSE
    (42) exp4 -> . STRING
    (43) exp4 -> . SELF
    (44) exp4 -> . ID P exp4
    (45) exp4 -> . SELF P exp4
    (46) call -> . ID LPAREN params RPAREN
    (47) call -> . ID LPAREN RPAREN

    NUMBER          shift and go to state 38
    ID              shift and go to state 31
    TRUE            shift and go to state 39
    FALSE           shift and go to state 40
    STRING          shift and go to state 41
    SELF            shift and go to state 42

    exp3                           shift and go to state 71
    exp4                           shift and go to state 36
    call                           shift and go to state 37

state 51

    (33) exp3 -> exp4 POT . exp3
    (33) exp3 -> . exp4 POT exp3
    (34) exp3 -> . exp4
    (35) exp4 -> . call
    (36) exp4 -> . NUMBER
    (39) exp4 -> . ID
    (40) exp4 -> . TRUE
    (41) exp4 -> . FALSE
    (42) exp4 -> . STRING
    (43) exp4 -> . SELF
    (44) exp4 -> . ID P exp4
    (45) exp4 -> . SELF P exp4
    (46) call -> . ID LPAREN params RPAREN
    (47) call -> . ID LPAREN RPAREN

    NUMBER          shift and go to state 38
    ID              shift and go to state 31
    TRUE            shift and go to state 39
    FALSE           shift and go to state 40
    STRING          shift and go to state 41
    SELF            shift and go to state 42

    exp4                           shift and go to state 36
    exp3                           shift and go to state 72
    call                           shift and go to state 37

state 52

    (45) exp4 -> SELF P . exp4
    (35) exp4 -> . call
    (36) exp4 -> . NUMBER
    (39) exp4 -> . ID
    (40) exp4 -> . TRUE
    (41) exp4 -> . FALSE
    (42) exp4 -> . STRING
    (43) exp4 -> . SELF
    (44) exp4 -> . ID P exp4
    (45) exp4 -> . SELF P exp4
    (46) call -> . ID LPAREN params RPAREN
    (47) call -> . ID LPAREN RPAREN

    NUMBER          shift and go to state 38
    ID              shift and go to state 31
    TRUE            shift and go to state 39
    FALSE           shift and go to state 40
    STRING          shift and go to state 41
    SELF            shift and go to state 42

    exp4                           shift and go to state 73
    call                           shift and go to state 37

state 53

    (19) body -> NEWLINE IDENT stms . DEDENT

    DEDENT          shift and go to state 74


state 54
